code rearrange base.py

--- a/templates/result.html
+++ b/templates/result.html
@@ -28,6 +28,9 @@
         <tr>
             <td>Snack: {{ snack3 }}</td>
         </tr>
+        <tr>
+            <td>Weight loss: {{ weight_loss_diet }}</td>
+        </tr>
     </table>
     <button type="button" class="btn btn-success" onClick= "location.href = '{{url_for("home") }}' " role="button">Back</button>
 {% endblock %}
