--- a/templates/result.html
+++ b/templates/result.html
@@ -31,6 +31,9 @@
         <tr>
             <td>Weight loss: {{ weight_loss_diet }}</td>
         </tr>
+        <tr>
+            <td>Weight gain: {{ weight_gain_diet }}</td>
+        </tr>
     </table>
     <button type="button" class="btn btn-success" onClick= "location.href = '{{url_for("home") }}' " role="button">Back</button>
 {% endblock %}
